// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getBaseChildStyles() should return correct css for child: input, state: error, theme: light and additionalDefaultJssStyle: undefined 1`] = `
{
  "::slotted(input)": {
    "WebkitAppearance": "none",
    "appearance": "none",
    "background": "transparent",
    "border": "2px solid #CC1922",
    "borderRadius": "4px",
    "boxSizing": "border-box",
    "color": "#010205",
    "display": "block",
    "font": "normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
    "height": "calc(calc(6px + 2.125ex) + 10px + 2px * 2 + 8px * 2)",
    "margin": 0,
    "outline": 0,
    "textIndent": 0,
    "transition": "background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1)",
    "width": "100%",
  },
  "::slotted(input:disabled)": {
    "WebkitTextFillColor": "#949598",
    "borderColor": "#949598",
    "color": "#949598",
    "cursor": "not-allowed",
  },
  "::slotted(input:focus)": {
    "borderColor": "#010205",
  },
  "::slotted(input[readonly])": {
    "background": "#D8D8DB",
    "borderColor": "#D8D8DB",
  },
  "@media(hover:hover)": {
    "::slotted(input:not(:disabled):not(:focus):not([readonly]):hover)": {
      "borderColor": "#951219",
    },
  },
}
`;

exports[`getBaseChildStyles() should return correct css for child: input, state: none, theme: light and additionalDefaultJssStyle: undefined 1`] = `
{
  "::slotted(input)": {
    "WebkitAppearance": "none",
    "appearance": "none",
    "background": "transparent",
    "border": "2px solid #6B6D70",
    "borderRadius": "4px",
    "boxSizing": "border-box",
    "color": "#010205",
    "display": "block",
    "font": "normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
    "height": "calc(calc(6px + 2.125ex) + 10px + 2px * 2 + 8px * 2)",
    "margin": 0,
    "outline": 0,
    "textIndent": 0,
    "transition": "background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1)",
    "width": "100%",
  },
  "::slotted(input:disabled)": {
    "WebkitTextFillColor": "#949598",
    "borderColor": "#949598",
    "color": "#949598",
    "cursor": "not-allowed",
  },
  "::slotted(input:focus)": {
    "borderColor": "#010205",
  },
  "::slotted(input[readonly])": {
    "background": "#D8D8DB",
    "borderColor": "#D8D8DB",
  },
  "@media(hover:hover)": {
    "::slotted(input:not(:disabled):not(:focus):not([readonly]):hover)": {
      "borderColor": "#010205",
    },
  },
}
`;

exports[`getBaseChildStyles() should return correct css for child: input, state: success, theme: light and additionalDefaultJssStyle: undefined 1`] = `
{
  "::slotted(input)": {
    "WebkitAppearance": "none",
    "appearance": "none",
    "background": "transparent",
    "border": "2px solid #197E10",
    "borderRadius": "4px",
    "boxSizing": "border-box",
    "color": "#010205",
    "display": "block",
    "font": "normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
    "height": "calc(calc(6px + 2.125ex) + 10px + 2px * 2 + 8px * 2)",
    "margin": 0,
    "outline": 0,
    "textIndent": 0,
    "transition": "background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1)",
    "width": "100%",
  },
  "::slotted(input:disabled)": {
    "WebkitTextFillColor": "#949598",
    "borderColor": "#949598",
    "color": "#949598",
    "cursor": "not-allowed",
  },
  "::slotted(input:focus)": {
    "borderColor": "#010205",
  },
  "::slotted(input[readonly])": {
    "background": "#D8D8DB",
    "borderColor": "#D8D8DB",
  },
  "@media(hover:hover)": {
    "::slotted(input:not(:disabled):not(:focus):not([readonly]):hover)": {
      "borderColor": "#0E4809",
    },
  },
}
`;

exports[`getBaseChildStyles() should return correct css for child: select, state: error, theme: dark and additionalDefaultJssStyle: undefined 1`] = `
{
  "::slotted(select)": {
    "WebkitAppearance": "none",
    "appearance": "none",
    "background": "transparent",
    "border": "2px solid #FC4040",
    "borderRadius": "4px",
    "boxSizing": "border-box",
    "color": "#FBFCFF",
    "display": "block",
    "font": "normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
    "height": "calc(calc(6px + 2.125ex) + 10px + 2px * 2 + 8px * 2)",
    "margin": 0,
    "outline": 0,
    "textIndent": 0,
    "transition": "background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1)",
    "width": "100%",
  },
  "::slotted(select:disabled)": {
    "WebkitTextFillColor": "#7E7F82",
    "borderColor": "#7E7F82",
    "color": "#7E7F82",
    "cursor": "not-allowed",
  },
  "::slotted(select:focus)": {
    "borderColor": "#FBFCFF",
  },
  "@media(hover:hover)": {
    "::slotted(select:not(:disabled):not(:focus):not([readonly]):hover)": {
      "borderColor": "#FB0404",
    },
  },
}
`;

exports[`getBaseChildStyles() should return correct css for child: select, state: none, theme: dark and additionalDefaultJssStyle: undefined 1`] = `
{
  "::slotted(select)": {
    "WebkitAppearance": "none",
    "appearance": "none",
    "background": "transparent",
    "border": "2px solid #88898C",
    "borderRadius": "4px",
    "boxSizing": "border-box",
    "color": "#FBFCFF",
    "display": "block",
    "font": "normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
    "height": "calc(calc(6px + 2.125ex) + 10px + 2px * 2 + 8px * 2)",
    "margin": 0,
    "outline": 0,
    "textIndent": 0,
    "transition": "background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1)",
    "width": "100%",
  },
  "::slotted(select:disabled)": {
    "WebkitTextFillColor": "#7E7F82",
    "borderColor": "#7E7F82",
    "color": "#7E7F82",
    "cursor": "not-allowed",
  },
  "::slotted(select:focus)": {
    "borderColor": "#FBFCFF",
  },
  "@media(hover:hover)": {
    "::slotted(select:not(:disabled):not(:focus):not([readonly]):hover)": {
      "borderColor": "#FBFCFF",
    },
  },
}
`;

exports[`getBaseChildStyles() should return correct css for child: select, state: success, theme: dark and additionalDefaultJssStyle: undefined 1`] = `
{
  "::slotted(select)": {
    "WebkitAppearance": "none",
    "appearance": "none",
    "background": "transparent",
    "border": "2px solid #09D087",
    "borderRadius": "4px",
    "boxSizing": "border-box",
    "color": "#FBFCFF",
    "display": "block",
    "font": "normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
    "height": "calc(calc(6px + 2.125ex) + 10px + 2px * 2 + 8px * 2)",
    "margin": 0,
    "outline": 0,
    "textIndent": 0,
    "transition": "background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1)",
    "width": "100%",
  },
  "::slotted(select:disabled)": {
    "WebkitTextFillColor": "#7E7F82",
    "borderColor": "#7E7F82",
    "color": "#7E7F82",
    "cursor": "not-allowed",
  },
  "::slotted(select:focus)": {
    "borderColor": "#FBFCFF",
  },
  "@media(hover:hover)": {
    "::slotted(select:not(:disabled):not(:focus):not([readonly]):hover)": {
      "borderColor": "#069561",
    },
  },
}
`;

exports[`getBaseChildStyles() should return correct css for child: textarea, state: error, theme: dark and additionalDefaultJssStyle: { bottom: 5 } 1`] = `
{
  "::slotted(textarea)": {
    "WebkitAppearance": "none",
    "appearance": "none",
    "background": "transparent",
    "border": "2px solid #FC4040",
    "borderRadius": "4px",
    "bottom": 5,
    "boxSizing": "border-box",
    "color": "#FBFCFF",
    "display": "block",
    "font": "normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
    "height": "auto",
    "margin": 0,
    "outline": 0,
    "textIndent": 0,
    "transition": "background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1)",
    "width": "100%",
  },
  "::slotted(textarea:disabled)": {
    "WebkitTextFillColor": "#7E7F82",
    "borderColor": "#7E7F82",
    "color": "#7E7F82",
    "cursor": "not-allowed",
  },
  "::slotted(textarea:focus)": {
    "borderColor": "#FBFCFF",
  },
  "::slotted(textarea[readonly])": {
    "background": "#404044",
    "borderColor": "#404044",
  },
  "@media(hover:hover)": {
    "::slotted(textarea:not(:disabled):not(:focus):not([readonly]):hover)": {
      "borderColor": "#FB0404",
    },
  },
}
`;

exports[`getBaseChildStyles() should return correct css for child: textarea, state: error, theme: dark and additionalDefaultJssStyle: undefined 1`] = `
{
  "::slotted(textarea)": {
    "WebkitAppearance": "none",
    "appearance": "none",
    "background": "transparent",
    "border": "2px solid #FC4040",
    "borderRadius": "4px",
    "boxSizing": "border-box",
    "color": "#FBFCFF",
    "display": "block",
    "font": "normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
    "height": "auto",
    "margin": 0,
    "outline": 0,
    "textIndent": 0,
    "transition": "background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1)",
    "width": "100%",
  },
  "::slotted(textarea:disabled)": {
    "WebkitTextFillColor": "#7E7F82",
    "borderColor": "#7E7F82",
    "color": "#7E7F82",
    "cursor": "not-allowed",
  },
  "::slotted(textarea:focus)": {
    "borderColor": "#FBFCFF",
  },
  "::slotted(textarea[readonly])": {
    "background": "#404044",
    "borderColor": "#404044",
  },
  "@media(hover:hover)": {
    "::slotted(textarea:not(:disabled):not(:focus):not([readonly]):hover)": {
      "borderColor": "#FB0404",
    },
  },
}
`;

exports[`getBaseChildStyles() should return correct css for child: textarea, state: none, theme: dark and additionalDefaultJssStyle: undefined 1`] = `
{
  "::slotted(textarea)": {
    "WebkitAppearance": "none",
    "appearance": "none",
    "background": "transparent",
    "border": "2px solid #88898C",
    "borderRadius": "4px",
    "boxSizing": "border-box",
    "color": "#FBFCFF",
    "display": "block",
    "font": "normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
    "height": "auto",
    "margin": 0,
    "outline": 0,
    "textIndent": 0,
    "transition": "background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1)",
    "width": "100%",
  },
  "::slotted(textarea:disabled)": {
    "WebkitTextFillColor": "#7E7F82",
    "borderColor": "#7E7F82",
    "color": "#7E7F82",
    "cursor": "not-allowed",
  },
  "::slotted(textarea:focus)": {
    "borderColor": "#FBFCFF",
  },
  "::slotted(textarea[readonly])": {
    "background": "#404044",
    "borderColor": "#404044",
  },
  "@media(hover:hover)": {
    "::slotted(textarea:not(:disabled):not(:focus):not([readonly]):hover)": {
      "borderColor": "#FBFCFF",
    },
  },
}
`;

exports[`getBaseChildStyles() should return correct css for child: textarea, state: success, theme: dark and additionalDefaultJssStyle: undefined 1`] = `
{
  "::slotted(textarea)": {
    "WebkitAppearance": "none",
    "appearance": "none",
    "background": "transparent",
    "border": "2px solid #09D087",
    "borderRadius": "4px",
    "boxSizing": "border-box",
    "color": "#FBFCFF",
    "display": "block",
    "font": "normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
    "height": "auto",
    "margin": 0,
    "outline": 0,
    "textIndent": 0,
    "transition": "background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1)",
    "width": "100%",
  },
  "::slotted(textarea:disabled)": {
    "WebkitTextFillColor": "#7E7F82",
    "borderColor": "#7E7F82",
    "color": "#7E7F82",
    "cursor": "not-allowed",
  },
  "::slotted(textarea:focus)": {
    "borderColor": "#FBFCFF",
  },
  "::slotted(textarea[readonly])": {
    "background": "#404044",
    "borderColor": "#404044",
  },
  "@media(hover:hover)": {
    "::slotted(textarea:not(:disabled):not(:focus):not([readonly]):hover)": {
      "borderColor": "#069561",
    },
  },
}
`;

exports[`getLabelStyles() should return correct css for child: input, hideLabel: false, state: { base: true, xs: false, s: true, m: false, l: true, xl: false }, theme: error and additionalRefForInputHover: dark 1`] = `
{
  "label": {
    "&__text": {
      "&+&": {
        "color": "#AFB0B3",
        "fontSize": "clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)",
        "marginTop": "-4px",
      },
      "@media(hover:hover)": {
        "&:hover": {
          "&~::slotted(input:not(:disabled):not(:focus):not([readonly]))": {
            "borderColor": "#FB0404 !important",
          },
        },
      },
      "@media(min-width:1000px)": {
        "height": "auto",
        "position": "static",
        "textIndent": 0,
        "width": "fit-content",
      },
      "@media(min-width:1300px)": {
        "height": "1px",
        "position": "absolute",
        "textIndent": "-999999px",
        "width": 0,
      },
      "@media(min-width:1760px)": {
        "height": "auto",
        "position": "static",
        "textIndent": 0,
        "width": "fit-content",
      },
      "@media(min-width:480px)": {
        "height": "auto",
        "position": "static",
        "textIndent": 0,
        "width": "fit-content",
      },
      "@media(min-width:760px)": {
        "height": "1px",
        "position": "absolute",
        "textIndent": "-999999px",
        "width": 0,
      },
      "color": "#FBFCFF",
      "display": "block",
      "font": "normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
      "height": "1px",
      "hyphens": "auto",
      "overflowWrap": "break-word",
      "position": "absolute",
      "textIndent": "-999999px",
      "transition": "color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1)",
      "width": 0,
    },
    "display": "flex",
    "flexDirection": "column",
    "gap": "4px",
    "position": "relative",
  },
  "unit": {
    "display": "block ",
    "pointerEvents": "none",
  },
}
`;

exports[`getLabelStyles() should return correct css for child: input, hideLabel: false, state: false, theme: error and additionalRefForInputHover: light 1`] = `
{
  "label": {
    "&__text": {
      "&+&": {
        "color": "#535457",
        "fontSize": "clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)",
        "marginTop": "-4px",
      },
      "@media(hover:hover)": {
        "&:hover": {
          "&~::slotted(input:not(:disabled):not(:focus):not([readonly]))": {
            "borderColor": "#951219 !important",
          },
        },
      },
      "color": "#010205",
      "display": "block",
      "font": "normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
      "height": "auto",
      "hyphens": "auto",
      "overflowWrap": "break-word",
      "position": "static",
      "textIndent": 0,
      "transition": "color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1)",
      "width": "fit-content",
    },
    "display": "flex",
    "flexDirection": "column",
    "gap": "4px",
    "position": "relative",
  },
}
`;

exports[`getLabelStyles() should return correct css for child: input, hideLabel: false, state: false, theme: none and additionalRefForInputHover: light 1`] = `
{
  "label": {
    "&__text": {
      "&+&": {
        "color": "#535457",
        "fontSize": "clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)",
        "marginTop": "-4px",
      },
      "@media(hover:hover)": {
        "&:hover": {
          "&~::slotted(input:not(:disabled):not(:focus):not([readonly]))": {
            "borderColor": "#010205 !important",
          },
        },
      },
      "color": "#010205",
      "display": "block",
      "font": "normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
      "height": "auto",
      "hyphens": "auto",
      "overflowWrap": "break-word",
      "position": "static",
      "textIndent": 0,
      "transition": "color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1)",
      "width": "fit-content",
    },
    "display": "flex",
    "flexDirection": "column",
    "gap": "4px",
    "position": "relative",
  },
}
`;

exports[`getLabelStyles() should return correct css for child: input, hideLabel: false, state: false, theme: success and additionalRefForInputHover: light 1`] = `
{
  "label": {
    "&__text": {
      "&+&": {
        "color": "#535457",
        "fontSize": "clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)",
        "marginTop": "-4px",
      },
      "@media(hover:hover)": {
        "&:hover": {
          "&~::slotted(input:not(:disabled):not(:focus):not([readonly]))": {
            "borderColor": "#0E4809 !important",
          },
        },
      },
      "color": "#010205",
      "display": "block",
      "font": "normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
      "height": "auto",
      "hyphens": "auto",
      "overflowWrap": "break-word",
      "position": "static",
      "textIndent": 0,
      "transition": "color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1)",
      "width": "fit-content",
    },
    "display": "flex",
    "flexDirection": "column",
    "gap": "4px",
    "position": "relative",
  },
}
`;

exports[`getLabelStyles() should return correct css for child: input, hideLabel: false, state: true, theme: error and additionalRefForInputHover: light 1`] = `
{
  "label": {
    "&__text": {
      "&+&": {
        "color": "#535457",
        "fontSize": "clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)",
        "marginTop": "-4px",
      },
      "@media(hover:hover)": {
        "&:hover": {
          "&~::slotted(input:not(:disabled):not(:focus):not([readonly]))": {
            "borderColor": "#951219 !important",
          },
        },
      },
      "color": "#010205",
      "display": "block",
      "font": "normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
      "height": "1px",
      "hyphens": "auto",
      "overflowWrap": "break-word",
      "position": "absolute",
      "textIndent": "-999999px",
      "transition": "color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1)",
      "width": 0,
    },
    "display": "flex",
    "flexDirection": "column",
    "gap": "4px",
    "position": "relative",
  },
}
`;

exports[`getLabelStyles() should return correct css for child: input, hideLabel: false, state: true, theme: none and additionalRefForInputHover: light 1`] = `
{
  "label": {
    "&__text": {
      "&+&": {
        "color": "#535457",
        "fontSize": "clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)",
        "marginTop": "-4px",
      },
      "@media(hover:hover)": {
        "&:hover": {
          "&~::slotted(input:not(:disabled):not(:focus):not([readonly]))": {
            "borderColor": "#010205 !important",
          },
        },
      },
      "color": "#010205",
      "display": "block",
      "font": "normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
      "height": "1px",
      "hyphens": "auto",
      "overflowWrap": "break-word",
      "position": "absolute",
      "textIndent": "-999999px",
      "transition": "color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1)",
      "width": 0,
    },
    "display": "flex",
    "flexDirection": "column",
    "gap": "4px",
    "position": "relative",
  },
}
`;

exports[`getLabelStyles() should return correct css for child: input, hideLabel: false, state: true, theme: success and additionalRefForInputHover: light 1`] = `
{
  "label": {
    "&__text": {
      "&+&": {
        "color": "#535457",
        "fontSize": "clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)",
        "marginTop": "-4px",
      },
      "@media(hover:hover)": {
        "&:hover": {
          "&~::slotted(input:not(:disabled):not(:focus):not([readonly]))": {
            "borderColor": "#0E4809 !important",
          },
        },
      },
      "color": "#010205",
      "display": "block",
      "font": "normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
      "height": "1px",
      "hyphens": "auto",
      "overflowWrap": "break-word",
      "position": "absolute",
      "textIndent": "-999999px",
      "transition": "color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1)",
      "width": 0,
    },
    "display": "flex",
    "flexDirection": "column",
    "gap": "4px",
    "position": "relative",
  },
}
`;

exports[`getLabelStyles() should return correct css for child: input, hideLabel: true, state: true, theme: error and additionalRefForInputHover: light 1`] = `
{
  "label": {
    "&__text": {
      "&+&": {
        "fontSize": "clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)",
        "marginTop": "-4px",
      },
      "@media(hover:hover)": {
        "&:hover": {
          "&~::slotted(input:not(:disabled):not(:focus):not([readonly]))": {
            "borderColor": "#951219 !important",
          },
        },
      },
      "color": "#949598",
      "display": "block",
      "font": "normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
      "height": "1px",
      "hyphens": "auto",
      "overflowWrap": "break-word",
      "position": "absolute",
      "textIndent": "-999999px",
      "transition": "color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1)",
      "width": 0,
    },
    "display": "flex",
    "flexDirection": "column",
    "gap": "4px",
    "position": "relative",
  },
}
`;

exports[`getLabelStyles() should return correct css for child: textarea, hideLabel: false, state: false, theme: error and additionalRefForInputHover: dark 1`] = `
{
  "label": {
    "&__text": {
      "&+&": {
        "color": "#AFB0B3",
        "fontSize": "clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)",
        "marginTop": "-4px",
      },
      "@media(hover:hover)": {
        "&:hover": {
          "&~::slotted(textarea:not(:disabled):not(:focus):not([readonly]))": {
            "borderColor": "#FB0404 !important",
          },
        },
      },
      "color": "#FBFCFF",
      "display": "block",
      "font": "normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
      "height": "auto",
      "hyphens": "auto",
      "overflowWrap": "break-word",
      "position": "static",
      "textIndent": 0,
      "transition": "color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1)",
      "width": "fit-content",
    },
    "display": "flex",
    "flexDirection": "column",
    "gap": "4px",
    "position": "relative",
  },
}
`;

exports[`getLabelStyles() should return correct css for child: textarea, hideLabel: false, state: false, theme: none and additionalRefForInputHover: dark 1`] = `
{
  "label": {
    "&__text": {
      "&+&": {
        "color": "#AFB0B3",
        "fontSize": "clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)",
        "marginTop": "-4px",
      },
      "@media(hover:hover)": {
        "&:hover": {
          "&~::slotted(textarea:not(:disabled):not(:focus):not([readonly]))": {
            "borderColor": "#FBFCFF !important",
          },
        },
      },
      "color": "#FBFCFF",
      "display": "block",
      "font": "normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
      "height": "auto",
      "hyphens": "auto",
      "overflowWrap": "break-word",
      "position": "static",
      "textIndent": 0,
      "transition": "color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1)",
      "width": "fit-content",
    },
    "display": "flex",
    "flexDirection": "column",
    "gap": "4px",
    "position": "relative",
  },
}
`;

exports[`getLabelStyles() should return correct css for child: textarea, hideLabel: false, state: false, theme: success and additionalRefForInputHover: dark 1`] = `
{
  "label": {
    "&__text": {
      "&+&": {
        "color": "#AFB0B3",
        "fontSize": "clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)",
        "marginTop": "-4px",
      },
      "@media(hover:hover)": {
        "&:hover": {
          "&~::slotted(textarea:not(:disabled):not(:focus):not([readonly]))": {
            "borderColor": "#069561 !important",
          },
        },
      },
      "color": "#FBFCFF",
      "display": "block",
      "font": "normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
      "height": "auto",
      "hyphens": "auto",
      "overflowWrap": "break-word",
      "position": "static",
      "textIndent": 0,
      "transition": "color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1)",
      "width": "fit-content",
    },
    "display": "flex",
    "flexDirection": "column",
    "gap": "4px",
    "position": "relative",
  },
}
`;

exports[`getLabelStyles() should return correct css for child: textarea, hideLabel: false, state: true, theme: error and additionalRefForInputHover: dark 1`] = `
{
  "label": {
    "&__text": {
      "&+&": {
        "color": "#AFB0B3",
        "fontSize": "clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)",
        "marginTop": "-4px",
      },
      "@media(hover:hover)": {
        "&:hover": {
          "&~::slotted(textarea:not(:disabled):not(:focus):not([readonly]))": {
            "borderColor": "#FB0404 !important",
          },
        },
      },
      "color": "#FBFCFF",
      "display": "block",
      "font": "normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
      "height": "1px",
      "hyphens": "auto",
      "overflowWrap": "break-word",
      "position": "absolute",
      "textIndent": "-999999px",
      "transition": "color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1)",
      "width": 0,
    },
    "display": "flex",
    "flexDirection": "column",
    "gap": "4px",
    "position": "relative",
  },
}
`;

exports[`getLabelStyles() should return correct css for child: textarea, hideLabel: false, state: true, theme: none and additionalRefForInputHover: dark 1`] = `
{
  "label": {
    "&__text": {
      "&+&": {
        "color": "#AFB0B3",
        "fontSize": "clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)",
        "marginTop": "-4px",
      },
      "@media(hover:hover)": {
        "&:hover": {
          "&~::slotted(textarea:not(:disabled):not(:focus):not([readonly]))": {
            "borderColor": "#FBFCFF !important",
          },
        },
      },
      "color": "#FBFCFF",
      "display": "block",
      "font": "normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
      "height": "1px",
      "hyphens": "auto",
      "overflowWrap": "break-word",
      "position": "absolute",
      "textIndent": "-999999px",
      "transition": "color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1)",
      "width": 0,
    },
    "display": "flex",
    "flexDirection": "column",
    "gap": "4px",
    "position": "relative",
  },
}
`;

exports[`getLabelStyles() should return correct css for child: textarea, hideLabel: false, state: true, theme: success and additionalRefForInputHover: dark 1`] = `
{
  "label": {
    "&__text": {
      "&+&": {
        "color": "#AFB0B3",
        "fontSize": "clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)",
        "marginTop": "-4px",
      },
      "@media(hover:hover)": {
        "&:hover": {
          "&~::slotted(textarea:not(:disabled):not(:focus):not([readonly]))": {
            "borderColor": "#069561 !important",
          },
        },
      },
      "color": "#FBFCFF",
      "display": "block",
      "font": "normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
      "height": "1px",
      "hyphens": "auto",
      "overflowWrap": "break-word",
      "position": "absolute",
      "textIndent": "-999999px",
      "transition": "color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1)",
      "width": 0,
    },
    "display": "flex",
    "flexDirection": "column",
    "gap": "4px",
    "position": "relative",
  },
}
`;

exports[`getLabelStyles() should return correct css for child: textarea, hideLabel: true, state: true, theme: error and additionalRefForInputHover: dark 1`] = `
{
  "label": {
    "&__text": {
      "&+&": {
        "fontSize": "clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)",
        "marginTop": "-4px",
      },
      "@media(hover:hover)": {
        "&:hover": {
          "&~::slotted(textarea:not(:disabled):not(:focus):not([readonly]))": {
            "borderColor": "#FB0404 !important",
          },
        },
      },
      "color": "#7E7F82",
      "display": "block",
      "font": "normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
      "height": "1px",
      "hyphens": "auto",
      "overflowWrap": "break-word",
      "position": "absolute",
      "textIndent": "-999999px",
      "transition": "color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1)",
      "width": 0,
    },
    "display": "flex",
    "flexDirection": "column",
    "gap": "4px",
    "position": "relative",
  },
}
`;
